PROJECT(stm32-template)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

IF(NOT CMAKE_TOOLCHAIN_FILE)
  SET(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/gcc_stm32.cmake")
  MESSAGE(STATUS "No cmake toolchain file specified, using default: ${CMAKE_TOOLCHAIN_FILE}")
ENDIF()
INCLUDE(${CMAKE_TOOLCHAIN_FILE})

FIND_PACKAGE(CMSIS REQUIRED)
#FIND_PACKAGE(STM32HAL REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    #${STM32HAL_INCLUDE_DIR}
)

SET(PROJECT_SOURCES
    main.c
)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES}) # ${STM32HAL_SOURCES}

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
